fix: fixed spacing issue.

--- a/client-portal/src/pages/public/downloads/Download.scss
+++ b/client-portal/src/pages/public/downloads/Download.scss
@@ -70,6 +70,7 @@
         display: flex;
         gap: 0.5rem;
         margin-top: 8rem;
+        padding-bottom: 7rem;
         align-items: center;
         justify-content: center;
         row-gap: 3rem;
